--- a/Public/CSS/sass/partials/_convidarTesters.scss
+++ b/Public/CSS/sass/partials/_convidarTesters.scss
@@ -14,7 +14,7 @@
         margin-bottom: 5.2rem;
     }
     div#testersTable{
-        width: 118rem;
+        width: 100%;
         margin: 0 auto;
         display: flex;
         flex-direction: column;
