--- a/Views/Partials/_footer.hbs
+++ b/Views/Partials/_footer.hbs
@@ -1,7 +1,7 @@
 <div class="container">
 
     {{!-- footer --}}
-    <footer id="footer">
+    <footer id="rodape" class="footer">
 
         <div class="logo">
             <a href="/"><img src="Imagens/logo-ally.svg" alt="Logo Ally"></a>
