--- a/Views/Testes/convidarTesters.hbs
+++ b/Views/Testes/convidarTesters.hbs
@@ -1,37 +1,87 @@
-<div class="cotainerDashboard">
-    {{> _sidebar}}
-    <div class="contentDashboard">
-        <div class="convidarTestersContainer">
-            <h1>Convidar Testers</h1>
-            {{#if users}}
-            <div id="testersTable">
-                <div id='testersTableHeader'>
-                    <div class="testersTableTile">Nome</div>
-                    <div class="testersTableTile">Idade</div>
-                    <div class="testersTableTile">Profissão</div>
-                    <div class="testersTableTile">Tipo de Defiência</div>
-                    <div class="testersTableTile">Convidar</div>
-                </div>
-                <ul>
-                    {{#each users as |user|}}
-                    <li id="tr">
-                        <div>{{user.nome}}</div>
-                        <div>
-                            <input type="hidden" name="_method" value="POST">
-                            <button id='convidar' onclick="mandarConvite('{{user.nome}}')" class="btn blue">
-                                <span>Convidar</span>
-                            </button>
-                        </div>
-                    </li>
-                    {{/each}}
-                </ul>
-                <div role="button"><a href="/testes/add/finalizado">Próximo</a></div>
-            </div>
-            {{else}}
-            <p>Não tem testers disponiveis</p>
-            {{/if}}
+<!DOCTYPE html>
+<html lang="pt">
 
-        </div>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/CSS/theme.css">
+    <title>Convidar Testers - Ally</title>
+</head>
+
+
+<body>
+
+    {{> _skip_links}}
+    <div id="dashboard">
+
+        <!-- header -->
+        <header class="headerDashboard">
+            <button class="menutoggle" aria-expanded="false">Menu</button>
+            <h1>Convidar Testers</h1>
+            <div class="utilities">
+                <span class="user">Olá {{nome}}!</span>
+                <a tabindex="0" class="logout" href="/users/logout">Sair</a>
+            </div>
+        </header>
+        <!-- /header -->
+        {{> _sidebar}}
+
+        <main id="conteudo">
+            <!-- breadcrumbs -->
+            <nav aria-label="breadcrumb">
+                <ol class="breadcrumb">
+                    <li class="breadcrumb-item"><a href="/">Testes </a>
+                    </li>
+                    <li class="breadcrumb-item active" aria-current="page">Convidar Tester</li>
+                </ol>
+            </nav>
+            <!-- / breadcrumbs -->
+            <div class="convidarTestersContainer">
+                {{#if users}}
+                <div id="testersTable">
+                    <div id='testersTableHeader'>
+                        <div class="testersTableTile">Nome</div>
+                        <div class="testersTableTile">Idade</div>
+                        <div class="testersTableTile">Profissão</div>
+                        <div class="testersTableTile">Tipo de Defiência</div>
+                        <div class="testersTableTile">Convidar</div>
+                    </div>
+                    <ul>
+                        {{#each users as |user|}}
+                        <li id="tr">
+                            <div>{{user.nome}}</div>
+                            <div>
+                                <input type="hidden" name="_method" value="POST">
+                                <button id='convidar' onclick="mandarConvite('{{user.nome}}')" class="btn blue">
+                                    <span>Convidar</span>
+                                </button>
+                            </div>
+                        </li>
+                        {{/each}}
+                    </ul>
+                    <div role="button"><a href="/testes/add/finalizado">Próximo</a></div>
+                </div>
+                {{else}}
+                <p>Não tem testers disponiveis</p>
+                {{/if}}
+
+            </div>
+        </main>
+        <!-- footer -->
+        <footer id="rodape" class="footerDashboard">
+            <p><span class="footer__copyright">&copy;</span> Ally 2020</p>
+            <a href="/contato">Entre em contato</a>
+        </footer>
+        <!-- / footer -->
+
     </div>
-</div>
-<script src="./Javascript/convite.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/js/all.min.js">
+    </script>
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js"
+        integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+    <script src="/Javascript/mobileDashboard.js"></script>
+
+    <script src="/Javascript/script.js"></script>
+    <script src="./Javascript/convite.js"></script>
