--- a/Public/CSS/sass/partials/_footer.scss
+++ b/Public/CSS/sass/partials/_footer.scss
@@ -1,4 +1,4 @@
-#footer {
+.footer {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
     grid-gap: 30px 10px;
