--- a/Public/CSS/sass/partials/_mediasqueries.scss
+++ b/Public/CSS/sass/partials/_mediasqueries.scss
@@ -1,8 +1,9 @@
 @media (max-width: 980px) {
-  h2 {
-    margin: 0 2rem 3rem !important;
-  }
+  // h2 {
+  //   margin: 0 2rem 3rem !important;
+  // }
 
+ 
   #bannerHome,
   .cta {
     flex-direction: column-reverse;
@@ -25,7 +26,7 @@
     }
   }
 
-  #footer .col {
+  .footer .col {
     margin: 0 3.5rem;
     margin-left: 0;
   }
@@ -40,6 +41,16 @@
       }
     }
   }
+
+  // dashboard
+
+  main.comTestes {
+    .cards-testes {
+      justify-content: center;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+    }
+  }
+
 }
 
 @media (max-width: 768px) {
@@ -53,9 +64,12 @@
     margin: 0 1rem 0;
   }
 
-  #menu,
-  .account {
-    display: none !important;
+  .headerHome,
+  .headerTester {
+    #menu,
+    .account {
+      display: none !important;
+    }
   }
 
   .menu-section {
