--- a/Public/CSS/sass/partials/_sidebarDashboard.scss
+++ b/Public/CSS/sass/partials/_sidebarDashboard.scss
@@ -1,85 +1,678 @@
 @import "cores";
-.cotainerDashboard{
-    display: grid;
-    grid-template-columns: 1fr 6fr;
+
+.btn-cta {
+  display: inline-block;
+  margin-top: 1rem;
+  color: var(--color-white);
+  padding: 0.8em 1.5em;
+  border-radius: 1.6em;
+  font-size: 14px;
+
+  background-color: var(--color-blue);
+  box-shadow: 0 5px 8px rgba(109, 121, 156, 0.2);
+  cursor: pointer;
+
+  transition-duration: 0.5s;
+  transition-property: background-color;
+  transition-timing-function: ease;
+
+  &:hover {
+    background-color: var(--color-hover);
+  }
 }
 
-aside.side-menu{
-    height: 100vh;
+.btn-orientacoes {
+  display: inline-block;
+  margin-top: 2rem;
+  color: var(--color-blue);
+  border: 2px solid var(--color-blue);
+  font-size: 14px;
+  background: var(--color-white);
+  padding: 1rem 2rem;
+  font-weight: 700;
+  border-radius: 3em;
+}
+
+$height-header: 60px;
+$height-footer: 50px;
+$width-sidenav: 210px;
+
+// css grid layout - mobile
+#dashboard {
+  position: relative;
+  display: grid;
+  grid-template-columns: 100%;
+  grid-template-rows: $height-header 1fr $height-footer;
+  grid-template-areas:
+    "header"
+    "main"
+    "footer";
+  height: 100vh;
+}
+
+// header dashboard
+.headerDashboard {
+  grid-area: header;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: 2px solid #f1f1f1;
+  margin: 0 20px;
+  padding: 20px 0 10px;
+
+  .menutoggle {
+    background: var(--color-blue);
+    font-size: 16px;
+    padding: 5px 10px;
+    color: var(--color-white);
+    font-weight: 900;
+    border: 0;
+    border-radius: 5px;
+    cursor: pointer;
+    z-index: 1;
+
+    &:hover {
+      background: var(--color-hover);
+    }
+  }
+
+  h1 {
+    font-size: 28px;
+    margin-left: 10px;
+  }
+
+  .utilities {
+    .user {
+      margin-right: 20px;
+      visibility: hidden;
+    }
+    .logout {
+      border: 2px solid #ccc;
+      color: var(--color-black);
+      font-size: 14px;
+      padding: 5px 15px;
+      border-radius: 5px;
+      transition: 0.3s;
+
+      &:hover {
+        background: grey;
+        color: #fff;
+        transition: 0.3s;
+      }
+    }
+  }
+}
+
+// sidebar
+.sidenav {
+  position: fixed;
+  grid-area: sidenav;
+  height: 100%;
+  overflow-y: auto;
+  background-color: #fbfbfd;
+  color: var(--color-white);
+  width: $width-sidenav;
+  box-shadow: 0px 4px 10px rgba(121, 121, 121, 0.21);
+  z-index: 2;
+
+ 
+  .close {
+    display: flex;
+    margin: 10px;
+    margin-left: auto;
+    cursor: pointer;
+    border-radius: 5px;
+    border: 0;
+    background: var(--color-blue);
+    font-size: 14px;
+    padding: 5px 10px;
+    color: var(--color-white);
+  }
+
+  .logo {
+    margin-bottom: 4rem;
+    margin-top: 2rem;
+    margin-right: 15px;
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+
+    //   img {
+    //     width: 10rem;
+    //   }
+  }
+
+  nav.main-nav {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+
+    form {
+      button {
+        cursor: pointer;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-weight: 700;
+        font-size: 1.4rem;
+        height: 3.5rem;
+        border-radius: 50px;
+        color: var(--color-white);
+        background: var(--color-blue);
+        padding: 20px 25px;
+        border: 0px;
+        box-shadow: none;
+      }
+    }
+
+    .navList {
+      width: $width-sidenav;
+      padding: 0;
+      margin-bottom: 10rem;
+      background-color: #fbfbfd;
+      list-style-type: none;
+
+      .active {
+        background: #f1f1f1;
+        border-right: 5px solid var(--color-pink) !important;
+        transition: 0.4s;
+      }
+    
+
+      .item {
+        position: relative;
+        padding: 15px 10px;
+        color: #fff;
+        font-size: 16px;
+        cursor: pointer;
+
+        &:hover {
+          
+          background: #f1f1f1;
+          border-right: 5px solid var(--color-pink) !important;
+        }
+        a {
+          margin: 0 15px;
+          display: flex;
+          flex-direction: row;
+          align-items: center;
+          color: var(--color-black);
+
+          img {
+            margin-right: 10px;
+            width: 20px;
+          }
+        }
+      }
+    }
+  }
+}
+
+// breadcrumb
+.breadcrumb {
+  display: flex;
+  padding: 1rem 1rem;
+  margin-top: 1.4rem;
+  list-style: none;
+  font-size: 14px;
+  border-radius: 0.25rem;
+  margin: 10px 25px 0;
+
+  .breadcrumb-item + .breadcrumb-item::before {
+    display: inline-block;
+    padding: 0 0.8rem;
+    color: #6c757d;
+    content: "/";
+  }
+}
+
+// pagina sem testes
+main.semTestes {
+  grid-area: main;
+  background-color: var(--color-white);
+
+  .main-panel {
+    display: flex;
+    justify-content: center;
+    min-height: 210px;
+    margin: 2rem 0;
+    align-items: center;
+
+    .panel-info {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+
+      img {
+        max-width: 90px;
+        margin-bottom: 10px;
+      }
+
+      h2 {
+        margin-bottom: 8px;
+        font-size: 24px;
+        text-align: center;
+      }
+    }
+  }
+
+  .cards {
+    display: block;
+    column-count: 1;
+    column-gap: 20px;
+    margin: 0 40px 30px;
+
+    .card {
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      min-height: 225px;
+      margin-bottom: 20px;
+      -webkit-column-break-inside: avoid;
+      box-shadow: 0px 4px 10px rgba(157, 155, 155, 0.25);
+
+      &__header {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        height: 45px;
+        color: var(--color-black);
+        background: #fff0f3;
+
+        &-title {
+          margin: 0 20px;
+          font-size: 18px;
+          letter-spacing: 0.5px;
+        }
+
+        &-link {
+          font-size: 16px;
+          letter-spacing: normal;
+          display: inline-block;
+        }
+      }
+
+      &__body {
+        width: 100%;
+        font-size: 16px;
+        min-width: 0;
+        padding: 20px;
+      }
+
+      ul.bullets {
+        display: flex;
+        flex-direction: column;
+        margin: 12px 50px 12px 20px;
+
+        li {
+          display: -webkit-box;
+
+          .bullet {
+            margin-right: 15px;
+
+            .fa-circle {
+              color: var(--color-pink);
+            }
+          }
+          span {
+            display: block;
+            font-size: 17px;
+            line-height: 1.5;
+            margin-bottom: 20px;
+          }
+        }
+      }
+    }
+
+    .secundary {
+      background: #fffef9;
+
+      padding: 20px 25px 0;
+
+      p {
+        font-size: 21px;
+        line-height: 1.5;
+        color: var(--color-blue);
+        font-weight: 700;
+      }
+    }
+  }
+}
+
+// pagina com testes
+main.comTestes {
+  padding: 30px 50px;
+
+  a.btn-cta {
+    display: table;
+    margin: 5rem auto 2rem auto;
+  }
+  .cards-testes {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(220px, 245px));
+    grid-gap: 20px;
+
+    .teste {
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      min-height: 235px;
+      margin-bottom: 20px;
+      // border-radius: 10px;
+      // max-width: 250px;
+      box-shadow: 0px 4px 10px rgba(157, 155, 155, 0.25);
+      position: relative;
+      min-height: 230px;
+      padding: 20px;
+
+      h2 {
+        font-size: 20px;
+        color: var(--color-blue);
+        margin: 10px 0 20px;
+        text-align: left;
+      }
+
+      p {
+        font-size: 16px;
+        font-weight: 300;
+        color: var(--color-black);
+      }
+
+      .btn-outline {
+        position: absolute;
+        bottom: 20px;
+        left: 20px;
+        display: inline-block;
+        color: var(--color-blue);
+        border: 2px solid var(--color-blue);
+        font-size: 14px;
+        padding: 0.8rem 1rem;
+        font-weight: 500;
+        border-radius: 3em;
+      }
+    }
+  }
+}
+
+// pagina teste individual
+.testeIndividual {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+  grid-gap: 0 20px;
+  padding: 0 40px;
+  margin: 30px 0 60px;
+
+  h2 {
+    font-weight: 900;
+    letter-spacing: 0.1rem;
+    font-size: 26px;
+  }
+
+  .infoTeste {
+    // border-radius: 10px;
+    box-shadow: 0px 4px 10px rgba(157, 155, 155, 0.2);
+    padding: 40px 30px 40px 50px;
+
+    a {
+      color: var(--color-black);
+    }
+
+    .info-main {
+      display: flex;
+      justify-content: space-between;
+      .actions {
+        display: flex;
+        cursor: pointer;
+
+        .editar {
+          background: #eaf2fb;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          width: 50px;
+          font-size: 20px;
+          border-radius: 8px;
+          height: 50px;
+          margin-right: 10px;
+
+          &:hover {
+            opacity: 0.8;
+          }
+        }
+
+        .red {
+          background: #ffdada;
+        }
+
+        button {
+          cursor: pointer;
+          border: none;
+        }
+      }
+
+      p {
+        font-weight: 300;
+      }
+
+      .url {
+        font-weight: 500;
+        color: var(--color-blue);
+        font-size: 16px;
+      }
+    }
+
+    .descricao {
+      margin-top: 30px;
+      border-bottom: 1px solid #ccc;
+      padding-bottom: 30px;
+
+      h3 {
+        font-weight: 900;
+        margin-bottom: 5px;
+      }
+    }
+
+    .tarefas {
+      margin-top: 30px;
+
+      h3 {
+        margin-bottom: 25px;
+        font-size: 1.9rem;
+        font-weight: 900;
+      }
+
+      ul {
+        font-size: 1.7rem;
+        li {
+          margin-bottom: 20px;
+        }
+      }
+    }
+  }
+
+  .videochamada {
+    background: url(../Imagens/videochamada.svg) no-repeat center center / cover;
+    min-height: 240px;
+    padding: 4.5rem 2rem 2rem 3rem;
+    color: var(--color-white);
+    cursor: pointer;
+    transition: 0.5s;
+
+    h2 {
+      color: white;
+      margin-top: 15px;
+    }
+
+    &:hover {
+        box-shadow: 0 10px 20px rgba(0, 42, 147, 0.3);
+        transition: box-shadow 0.3s ease;
+        
+      }
+  }
+
+  .gravacoes {
+    background: url(../Imagens/gravacoes.png) no-repeat center center / cover;
+    min-height: 240px;
+    margin-top: 2rem;
+    padding: 2rem 3rem;
+    text-align: center;
+    cursor: pointer;
+   color: var(--color-black);
+    transition: 0.5s;
+
+    h2 {
+      font-size: 24px;
+      margin: 6rem 0 0.8rem;
+    }
+
+
+    &:hover {
+        box-shadow: 0 10px 15px rgba(0, 42, 147, 0.2);
+        transition: box-shadow 0.3s ease;
+        
+      }
+  }
+}
+// configuracoes
+.configuracoes {
+  cursor: pointer;
+  a {
+    display: grid;
+    justify-content: center;
+    align-content: center;
+    grid-template-columns: 1fr 4fr;
+  }
+
+  .btn-info {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: var(--color-white);
+    box-shadow: 0px 4px 4px rgba(163, 163, 163, 0.25);
+    padding: 15px 0;
+    width: 350px;
+    transition: 0.3s;
+    margin-bottom: 20px;
+    a {
+      color: var(--color-black);
+    }
+
+    img {
+      margin: 0 5px;
+
+      max-width: 20px;
+    }
+
+    &:hover {
+      box-shadow: 0 10px 20px rgba(0, 102, 147, 0.1);
+      transition: box-shadow 0.3s ease;
+    }
+  }
+
+  .btn-delete {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #b20822;
+    box-shadow: 0px 4px 4px rgba(163, 163, 163, 0.25);
+    padding: 15px 0;
+    transition: 0.3s;
+    width: 350px;
+    a {
+      color: var(--color-white);
+    }
+
+    img {
+      margin: 0 5px;
+      height: auto;
+      max-width: 20px;
+    }
+
+    &:hover {
+      box-shadow: 0 10px 20px rgba(0, 102, 147, 0.1);
+      transition: box-shadow 0.3s ease;
+    }
+  }
+}
+
+.main-panel {
+  display: flex;
+  justify-content: center;
+  min-height: 210px;
+  margin: 6rem 0 2rem;
+  align-items: center;
+
+  .panel-info {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #FBFBFD;
-    .logo{
-        margin-bottom: 8rem;
-        margin-top: 3rem;
-        width: 75%;
-        display: flex;
-        align-items: flex-start;
-        justify-content: flex-start;
-        img{
-            width: 10rem;
-            height: 6.3rem;
-           
-        }
+    text-align: center;
+  }
+}
+// footer
+.footerDashboard {
+  grid-area: footer;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 16px;
+  background-color: #f0f0f0;
+
+  a  {
+      color: var(--color-black);
+  }
+}
+
+// Mobile screen breakpoints (750px)
+@media only screen and (min-width: 750px) {
+  #dashboard {
+    display: grid;
+    grid-template-columns: $width-sidenav calc(100% - 210px);
+    grid-template-rows: $height-header 1fr $height-footer;
+    grid-template-areas:
+      "sidenav header"
+      "sidenav main"
+      "sidenav footer";
+    height: 100vh;
+  }
+
+  .sidenav {
+    position: relative;
+
+    .close {
+      display: none;
     }
-    nav.navAside{
-        display: flex;
-        width: 100%;
-        height: 60%;
-        flex-direction: column;
-        justify-content:space-between;
+  }
+}
 
-        ul{
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-
-            li{
-                display: flex;
-                width: 75%;
-                align-items: center;
-                margin-bottom: 2.2rem;
-                justify-content: space-around;
-                align-items: flex-end;
-
-                a{
-                    img{
-                        width: 1.8rem;
-                        height: 1.8rem;
-                    }
-                    font-size: 1.6rem;
-                    font-weight: 700;
-                    color: $roxo;
-                    width: 100%;
-                    display: grid;
-                    justify-content: center;
-                    align-content: center;
-                    grid-template-rows: 1fr;
-                    grid-template-columns: 1fr 4fr;
-                }
-            }
-
-        }
-        form{
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-
-            button{
-                cursor: pointer;
-                width: 75%;
-                font-weight: 700;
-                font-size: 1.4rem;
-                height: 3.5rem;
-                border-radius: 51px;
-                color: #fff;
-                background-color: $azul;
-                border: 0px;
-                box-shadow: none;
-            }
-           
-        }
+// Medium screens breakpoint (1050px)
+@media only screen and (min-width: 1050px) {
+  main.semTestes {
+    .cards {
+      column-count: 2;
     }
+  }
+
+  .utilities {
+    .user {
+      margin-right: 20px;
+      visibility: visible !important;
+    }
+  }
+}
+
+svg.svg-inline--fa.fa-circle.fa-w-16 {
+  color: var(--color-pink);
+  font-size: 12px;
+  margin-right: 10px;
+}
+
+svg.svg-inline--fa.fa-video.fa-w-18 {
+  border: 2px solid var(--color-white);
+  border-radius: 50%;
+  padding: 10px;
+  width: 50px;
+  height: auto;
 }
