--- a/Public/CSS/sass/partials/_videoGrid.scss
+++ b/Public/CSS/sass/partials/_videoGrid.scss
@@ -2,17 +2,17 @@
 @import 'cores';
 #sala{
     display: flex;
-    width:80%;
-    height: 95vh;
+    width: 95%;
+    height: 100vh;
     align-items: flex-start;
     justify-content: center;
-    margin-top: 3rem;
+    margin-top: 2rem;
     margin-left: auto;
     margin-right: auto;
 
   .videoContainer {
         background: #FDFEFF;
-        height: 75%;
+        height: 80%;
         width: 90%;
         display: grid;
         grid-template-columns: 0fr 0.6fr 3fr 0.1fr;
@@ -129,10 +129,11 @@
   
       #anotacoes{
         width: 30%;
-        height: 75%;
+        height: 80%;
         background-color: #F2F2F2;
         display: flex;
         flex-direction: column;
+        padding-bottom: 20px;
         #todasAnotacoes{
           height:80%;
           .todasAnotacoesHead{
