--- a/Views/dashboard.hbs
+++ b/Views/dashboard.hbs
@@ -1,12 +1,52 @@
-<div class="cotainerDashboard">
-    {{> _sidebar}}
-    <div class="contentDashboard">
-        <h3>Bem Vindo {{nome}}</h3>
+<!DOCTYPE html>
+<html lang="pt">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/CSS/theme.css">
+    <title>Testes - Ally</title>
+</head>
+
+
+<body>
+
+    {{> _skip_links}}
+    <div id="dashboard">
+
+        <!-- header -->
+        <header class="headerDashboard">
+            <button class="menutoggle" aria-expanded="false">Menu</button>
+            <h1>Testes</h1>
+            <div class="utilities">
+                <span class="user">Olá {{nome}}!</span>
+                <a tabindex="0" class="logout" href="/users/logout">Sair</a>
+            </div>
+        </header>
+        <!-- /header -->
+        {{> _sidebar}}
+
+
         {{#ifCond tipo 'tester'}}
         {{> _convites this}}
         {{/ifCond}}
+        
         {{#ifCond tipo 'empresa'}}
         {{> _testes this}}
         {{/ifCond}}
+
+        <!-- footer -->
+        <footer id="rodape" class="footerDashboard">
+            <p><span class="footer__copyright">&copy;</span> Ally 2020</p>
+            <a href="/contato">Entre em contato</a>
+        </footer>
+        <!-- / footer -->
+
     </div>
-</div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/js/all.min.js">
+    </script>
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js"
+        integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+    <script src="/Javascript/mobileDashboard.js"></script>
